tests/18.lean.expected
tests/18.lean:22:6: error: tactic 'aesop' failed, failed to prove the goal after exhaustive search.
α : Type u_1
inst✝ : DecidableEq α
v x : α
xs : List α
ih : v ∈ xs → ∃ l r, xs = l ++ v :: r
h : v ∈ x :: xs
no : ¬x = v
⊢ ∃ l r, x :: xs = l ++ v :: r
